[package]
name = "kyoto_network"
version = "0.1.0"
authors = ["jiachenbai"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Network module for kyoto"
homepage = "https://github.com/JeepYiheihou/kyoto_network"
repository = "https://github.com/JeepYiheihou/kyoto_network"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
kyoto_data = "0.1.0"
kyoto_machine = "0.1.0"
kyoto_protocol = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"